--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@ http://www.templatemo.com/tm-398-nature
 
             <div class="menu visible-md visible-lg">
                 <ul id="menu-list">
-                    <li class="active home-menu"><a href="#home">Home</a></li>
-                    <li class="about-menu"><a href="#about">About Us</a></li>
-                    <li class="services-menu"><a href="#services">Our Services</a></li>
-                    <li class="testimonial-menu"><a href="#testimonial">Testimonials</a></li>
-                    <li class="contact-menu"><a href="#contact">Contact</a></li>
+                    <li class="active home-menu"><a href="#home">HOME</a></li>
+                    <li class="about-menu"><a href="#about">BLOG</a></li>
+                    <li class="services-menu"><a href="#services">MIIDL</a></li>
+                    <li class="testimonial-menu"><a href="#testimonial">MATRIX</a></li>
+                    <li class="contact-menu"><a href="#contact">CONTACT</a></li>
                 </ul>
             </div><!-- /.menu -->
 
@@ -62,43 +62,54 @@ http://www.templatemo.com/tm-398-nature
                         
                         <section id="home-text" class="active templatemo-content-section">
                             <div class="col-sm-12 col-md-12 col-lg-12">
-                                <h2>Introducing Nature Theme</h2>
-                                <p>Nature is free Bootstrap theme from templatemo. You may download and use this layout for any purpose. Credit goes to <a rel="nofollow" href="http://unsplash.com" target="_blank">Unsplash</a> for background images used in this template. Maecenas adipiscing, leo a facilisis tempor, mi quam feugiat eros, ullamcorper porttitor elit turpis ac risus. Suspendisse non sem a leo mattis dapibus.</p>
-                                <p>Quisque non tempus lacus, non placerat arcu. Donec nibh ipsum, pharetra nec pellentesque at, mattis ut lorem. Fusce dapibus tristique neque, eget ultricies lorem tincidunt vitae. Aliquam erat volutpat. Integer vulputate ultricies nisl, sed vehicula justo accumsan non.</p>
+                                <h2 class="text-center">Welcome to chunribu's homepage!</h2>
+                                <p>👋 Hi! I’m @chunribu</p>
+                                <p>👀 I’m interested in computational biology</p>
+                                <p>📫 Email: chunribu@mail.sdu.edu.cn</p>
+                                <p>📖 Blog: chunribu.github.io/blog/</p>
                             </div>
                         </section><!-- /.home-text -->    
 
                         <section id="about-text" class="inactive">
-                            <h2 class="text-center">About Us</h2>
-                            <div class="col-sm-6 col-md-6">
-                                <p>In tellus ipsum, ullamcorper vitae justo sit amet, mattis consequat tortor. Pellentesque rutrum, ligula vel fermentum imperdiet, lectus eros volutpat urna, id mollis dolor justo vulputate justo ut sit amet ante luctus metus.</p>
-                            </div>
-                            <div class="col-sm-6 col-md-6">
-                                <p>Suspendisse risus urna, posuere id orci ut, facilisis accumsan ipsum. Etiam sodales consequat purus non vulputate. Aliquam erat volutpat. Sed vehicula lacinia porta. Vivamus faucibus dui nulla, a aliquet nunc porta in.</p>
+                            <h2 class="text-center">Blog</h2>
+                            <div class="col-sm-12 col-md-12 col-lg-12">
+                                <p>This is my <a href="blog">blog</a></p>
+                                <p>Just for a Record of Knowledge</p>
+                                <p></p>
+                                <p></p>
+                                <p></p>
+                                <p></p>
                             </div>
                         </section><!-- /.about-text --> 
 
                         <section id="services-text" class="inactive">
-                            <h2 class="text-center">Our Services</h2>
-                            <div class="col-sm-4 col-md-4">
-                                <h3>Marketing</h3>
-                                <p>Nullam vitae lectus dui. Donec vulputate ac tortor id convallis. Sed nisi mauris, laoreet vitae lacus at, viverra viverra neque. Curabitur nec aliquam lacus.</p>
-                            </div>
-                            <div class="col-sm-4 col-md-4">
-                                <h3>Public Relations</h3>
-                                <p>Maecenas aliquam vitae urna sit amet elementum. Cras consequat libero nisi, vel condimentum nibh eleifend ut. Donec consequat arcu.</p>
-                            </div>
-                            <div class="col-sm-4 col-md-4">
-                                <h3>Digital Media</h3>
-                                <p>In tellus ipsum, ullamcorper vitae justo sit amet, mattis consequat tortor. Suspendisse risus urna, posuere id orci ut, facilisis accumsan ipsum.</p>
+                            <h2 class="text-center">MIIDL</h2>
+                            <div class="col-sm-12 col-md-12 col-lg-12">
+                                <p><a href="miidl">MIIDL</a> is a Python package for microbial biomarkers identification powered by interpretable deep learning</p>
+                                <p>
+                                    <pre>@misc{jiang2021miidl,
+                                        title={MIIDL: a Python package for microbial biomarkers identification powered by interpretable deep learning}, 
+                                        author={Jian Jiang},
+                                        year={2021},
+                                        eprint={2109.12204},
+                                        archivePrefix={arXiv},
+                                        primaryClass={q-bio.QM}
+                                  }</pre>
+                                </p>
+                                <p></p>
+                                <p></p>
+                                <p></p>
+                                <p></p>
                             </div>
                         </section><!-- /.services-text --> 
 
                         <section id="testimonial-text" class="inactive">
-                            <div class="col-sm-12 col-md-12">
-                                <h2>Testimonials</h2>
-                                <p>Quisque non tempus lacus, non placerat arcu. Donec nibh ipsum, pharetra nec pellentesque at, mattis ut lorem. Fusce dapibus tristique neque, eget ultricies lorem tincidunt vitae. Aliquam erat volutpat. Suspendisse non sem a leo mattis dapibus. Duis vel ornare arcu. Quisque at malesuada tortor.</p>
-                                <p>Integer vulputate ultricies nisl, sed vehicula justo accumsan non. Aenean quis semper metus. Maecenas adipiscing, leo a facilisis tempor, mi quam feugiat eros, ullamcorper porttitor elit turpis ac risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <h2 class="text-center">matrix-py3</h2>
+                            <div class="col-sm-12 col-md-12 col-lg-12">
+                                <p><a href="matrix-py3">matrix-py3</a> is a Python3 implementation of cmatrix to generate "character falls".</p>
+                                <p>It is adapted from pmatrix that is well recommended if you prefer Python2.</p>
+                                <p>It is also noteworthy that a timer is added to matrix-py3 for a scheduled stop.</p>
+                                <p>What's more, matrix-py3 can be regarded as a screensaver that runs parallel to other time-consuming programs.</p>
                             </div>
                         </section><!-- /.testimonial-text --> 
 
@@ -112,19 +123,19 @@ http://www.templatemo.com/tm-398-nature
                                 <div class="row">
                                     <div class="col-sm-6 col-md-6">
                                         <div id="map-canvas"></div>
-                                        <p>990 Digital Street, New Forest Area, San Francisco, CA 10660</p>
+                                        <p>Shunyi District, Beijing, China</p>
                                     </div>
 
                                     <div class="col-sm-6 col-md-6">
-                                        <form action="#" method="post">
+                                        <form action="READ.md" method="post">
 
                                                 <div class="form-group">
                                                     <!--<label for="contact_name">Name:</label>-->
-                                                    <input type="text" id="contact_name" class="form-control" placeholder="Name" />
+                                                    <input type="text" id="contact_name" class="form-control" placeholder="Your Name" />
                                                 </div>
                                                 <div class="form-group">
                                                     <!--<label for="contact_email">Email:</label>-->
-                                                    <input type="text" id="contact_email" class="form-control" placeholder="Email Address" />
+                                                    <input type="text" id="contact_email" class="form-control" placeholder="Your Email" />
                                                 </div>
                                                 <div class="form-group">
                                                     <!--<label for="contact_message">Message:</label>-->
