--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@ http://www.templatemo.com/tm-398-nature
                             <div class="col-sm-12 col-md-12 col-lg-12">
                                 <p><a href="miidl">MIIDL</a> is a Python package for microbial biomarkers identification powered by interpretable deep learning</p>
                                 <p>
-                                    <pre>@misc{jiang2021miidl,
-                                        title={MIIDL: a Python package for microbial biomarkers identification powered by interpretable deep learning}, 
-                                        author={Jian Jiang},
-                                        year={2021},
-                                        eprint={2109.12204},
-                                        archivePrefix={arXiv},
-                                        primaryClass={q-bio.QM}
-                                  }</pre>
+<pre>@misc{jiang2021miidl,
+    title={MIIDL: a Python package for microbial biomarkers identification powered by interpretable deep learning}, 
+    author={Jian Jiang},
+    year={2021},
+    eprint={2109.12204},
+    archivePrefix={arXiv},
+    primaryClass={q-bio.QM}
+}</pre>
                                 </p>
                                 <p></p>
                                 <p></p>
@@ -106,10 +106,10 @@ http://www.templatemo.com/tm-398-nature
                         <section id="testimonial-text" class="inactive">
                             <h2 class="text-center">matrix-py3</h2>
                             <div class="col-sm-12 col-md-12 col-lg-12">
-                                <p><a href="matrix-py3">matrix-py3</a> is a Python3 implementation of cmatrix to generate "character falls".</p>
-                                <p>It is adapted from pmatrix that is well recommended if you prefer Python2.</p>
-                                <p>It is also noteworthy that a timer is added to matrix-py3 for a scheduled stop.</p>
-                                <p>What's more, matrix-py3 can be regarded as a screensaver that runs parallel to other time-consuming programs.</p>
+                                <p>· <a href="matrix-py3">matrix-py3</a> is a Python3 implementation of cmatrix to generate "character falls".</p>
+                                <p>· It is adapted from pmatrix that is well recommended if you prefer Python2.</p>
+                                <p>· It is also noteworthy that a timer is added to matrix-py3 for a scheduled stop.</p>
+                                <p>· What's more, matrix-py3 can be regarded as a screensaver that runs parallel to other time-consuming programs.</p>
                             </div>
                         </section><!-- /.testimonial-text --> 
 
