--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@ http://www.templatemo.com/tm-398-nature
                         <section id="home-text" class="active templatemo-content-section">
                             <div class="col-sm-12 col-md-12 col-lg-12">
                                 <h2 class="text-center">Welcome to chunribu's homepage!</h2>
-                                <p>👋 Hi! I’m @chunribu</p>
-                                <p>👀 I’m interested in computational biology</p>
+                                <p>👋 Hi! I am @chunribu</p>
+                                <p>👀 I am interested in computational biology</p>
                                 <p>📫 Email: chunribu@mail.sdu.edu.cn</p>
-                                <p>📖 Blog: chunribu.github.io/blog/</p>
+                                <p></p>
                             </div>
                         </section><!-- /.home-text -->    
 
@@ -127,15 +127,15 @@ http://www.templatemo.com/tm-398-nature
                                     </div>
 
                                     <div class="col-sm-6 col-md-6">
-                                        <form action="READ.md" method="post">
+                                        <form action="read.html" method="post">
 
                                                 <div class="form-group">
                                                     <!--<label for="contact_name">Name:</label>-->
-                                                    <input type="text" id="contact_name" class="form-control" placeholder="Your Name" />
+                                                    <input type="text" id="contact_name" class="form-control" placeholder="Topic" />
                                                 </div>
                                                 <div class="form-group">
                                                     <!--<label for="contact_email">Email:</label>-->
-                                                    <input type="text" id="contact_email" class="form-control" placeholder="Your Email" />
+                                                    <input type="text" id="contact_email" class="form-control" placeholder="Email" value="chunribu@mail.sdu.edu.cn" />
                                                 </div>
                                                 <div class="form-group">
                                                     <!--<label for="contact_message">Message:</label>-->
