--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@ http://www.templatemo.com/tm-398-nature
                                 <h2 class="text-center">Welcome to chunribu's homepage!</h2>
                                 <p>👋 Hi! I am @chunribu</p>
                                 <p>👀 I am interested in computational biology</p>
-                                <p>📫 Email: chunribu@mail.sdu.edu.cn</p>
                                 <p></p>
+                                <p>🐱‍🏍 Across the Great Wall we can reach every corner in the world</p>
                             </div>
                         </section><!-- /.home-text -->    
 
@@ -135,7 +135,7 @@ http://www.templatemo.com/tm-398-nature
                                                 </div>
                                                 <div class="form-group">
                                                     <!--<label for="contact_email">Email:</label>-->
-                                                    <input type="text" id="contact_email" class="form-control" placeholder="Email" value="chunribu@mail.sdu.edu.cn" />
+                                                    <input type="text" id="contact_email" class="form-control" placeholder="Email" value="To:chunribu@mail.sdu.edu.cn" />
                                                 </div>
                                                 <div class="form-group">
                                                     <!--<label for="contact_message">Message:</label>-->
