--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ http://www.templatemo.com/tm-398-nature
                                     </div>
 
                                     <div class="col-sm-6 col-md-6">
-                                        <form action="read.html" method="post">
+                                        <form action="read" method="post">
 
                                                 <div class="form-group">
                                                     <!--<label for="contact_name">Name:</label>-->
